fix: front venta unificado
- Se usa | number:'1.2-2':'es-AR' para precios como en el resto de componentes.
- Sugerencias de ceci (Venta, detalle venta, etc.)
- Plural de productos o no en función de cuantos se seleccionan.
- Agregar código de barra en c/producto
- Agregar ID cliente en los clientes para facilitar búsqueda

--- a/src/app/modules/venta/registrar-venta/registrar-venta.component.scss
+++ b/src/app/modules/venta/registrar-venta/registrar-venta.component.scss
@@ -194,3 +194,8 @@
 .product-icon {
   font-size: 120px; /* Aumenta el tamaño del icono si no hay imagen */
 }
+
+.codigoBarra {
+  font-size: 12px;
+  color: #6c757d;
+}
