--- a/src/app/modules/clientes/consultar-clientes/consultar-clientes.component.html
+++ b/src/app/modules/clientes/consultar-clientes/consultar-clientes.component.html
@@ -72,7 +72,7 @@
             </ng-container>
 
             <ng-container matColumnDef="mail">
-              <mat-header-cell *matHeaderCellDef>MAIL</mat-header-cell>
+              <mat-header-cell *matHeaderCellDef>EMAIL</mat-header-cell>
               <mat-cell *matCellDef="let usuario" data-label="Mail">{{ usuario.mail }}</mat-cell>
             </ng-container>
 
