--- a/src/app/modules/venta/registrar-venta/registrar-venta.component.html
+++ b/src/app/modules/venta/registrar-venta/registrar-venta.component.html
@@ -3,7 +3,7 @@
     <!-- Lista de productos -->
     <div class="col-7">
       <mat-card class="p-4 product-list">
-        <h2 class="invoice-title">Registrar venta</h2>
+        <h2 class="invoice-title">Venta</h2>
         <mat-divider></mat-divider>
         <br>
         <br>
@@ -63,17 +63,20 @@
                 </ng-template>
               </div>
 
-              <!-- Nombre del producto -->
+              <!-- Nombre y código de barra del producto -->
               <div class="row align-items-center text-center my-3">
                 <div class="col">
                   {{producto.nombre}}
+                </div>
+                <div class="w-100 codigoBarra">
+                  ({{producto.codigoBarra}})
                 </div>
               </div>
 
               <!-- Precio del producto -->
               <div class="row align-items-center text-center mb-3">
                 <div class="col">
-                  <strong class="product-price">${{producto.costo}}</strong>
+                  <strong class="product-price">${{producto.costo | number:'1.2-2':'es-AR' }}</strong>
                 </div>
               </div>
             </div>
@@ -89,7 +92,7 @@
         <div class="text-center" *ngIf="productos.length == 0 && !cargandoProductos">
           <div class="empty-product-message">
             <p>
-              Para crear tu primer factura te invitamos a crear tu primer producto.
+              Para realizar tu primer venta, te invitamos a crear tu primer producto.
             </p>
             <button mat-raised-button color="accent" class="btn round" id="btnBuscar">Nuevo producto</button>
           </div>
@@ -101,7 +104,7 @@
     <!-- Factura de venta -->
     <div class="col">
       <mat-card class="p-4 sale-invoice">
-        <h2 class="invoice-title">Factura de venta</h2>
+        <h2 class="invoice-title">Detalle de venta</h2>
         <mat-divider></mat-divider>
         <br>
         <div class="row">
@@ -133,7 +136,7 @@
               <mat-label>Cliente</mat-label>
               <mat-select [formControl]="txCliente">
                 <mat-option *ngFor="let cliente of this.clientes" [value]="cliente.id">
-                  {{ cliente.nombre + ' ' + cliente.apellido }}
+                  {{ '(' + cliente.id + ')' + ' ' + cliente.nombre + ' ' + cliente.apellido }}
                 </mat-option>
               </mat-select>
             </mat-form-field>
@@ -151,7 +154,7 @@
             <div class="d-flex justify-content-between align-items-center border-bottom p-3 producto-item">
               <div class="col-4 d-flex flex-column">
                 <span class="m-0"><b>{{ producto.nombre }}</b></span>
-                <span class="text-muted">$ {{ producto.costo }}</span>
+                <span class="text-muted">P/U: ${{ producto.costo | number:'1.2-2':'es-AR' }}</span>
               </div>
               <div class="d-flex align-items-center col-4 justify-content-center">
                 <button class="btn btn-light btn-sm" (click)="disminuirCantidad(producto)">-</button>
@@ -159,7 +162,7 @@
                 <button class="btn btn-light btn-sm" (click)="aumentarCantidad(producto)">+</button>
               </div>
               <div class="text-end col-4">
-                <span class="m-0 costo"><b>$ {{ producto.costo * producto.cantidadSeleccionada }}</b></span>
+                <span class="m-0 costo"><b>${{ producto.costo * producto.cantidadSeleccionada | number:'1.2-2':'es-AR' }}</b></span>
                 <div class="iconos-editar-eliminar ">
                   <button mat-icon-button [matTooltip]="'Editar en esta venta'" (click)="editarProductoEnVenta(producto)">
                     <mat-icon>edit</mat-icon>
@@ -178,12 +181,12 @@
           <div class="summary-container">
             <div class="summary-row">
               <span>Subtotal</span>
-              <span class="text-summary">$ {{ subTotal.toFixed(2) }}</span>
+              <span class="text-summary">$ {{ subTotal | number:'1.2-2':'es-AR' }}</span>
             </div>
             <div class="dotted-line"></div>
             <div class="summary-row">
               <span>IVA (21.00%)</span>
-              <span class="text-summary">$ {{ impuestoIva.toFixed(2) }}</span>
+              <span class="text-summary">$ {{ impuestoIva | number:'1.2-2':'es-AR' }}</span>
             </div>
           </div>
         </div>
@@ -198,7 +201,7 @@
         <div class="container mt-4">
           <button class="btn btn-custom" [disabled]="totalVenta == 0 || registrandoVenta" (click)="confirmarVenta()">
             <span>Confirmar venta</span>
-            <span class="text-right">$ {{ this.totalVenta.toFixed(2) }}</span>
+            <span class="text-right">$ {{ this.totalVenta | number:'1.2-2':'es-AR' }}</span>
           </button>
           <!-- loading -->
           <div *ngIf="registrandoVenta">
@@ -209,7 +212,10 @@
             <br>
           </div>
           <div class="d-flex justify-content-between mt-3">
-            <span class="text-small">{{ productosSeleccionados.length }} Producto</span>
+            <span class="text-small">
+              {{ productosSeleccionados.length }}
+              {{ productosSeleccionados.length === 1 ? 'Producto' : 'Productos' }}
+            </span>
             <a (click)="cancelarVenta()" class="text-small btn-cancelar">Cancelar</a>
           </div>
         </div>
