fix: unificar consultar venta, clientes, pedidos

--- a/src/app/modules/pedidos/consultar-pedidos/consultar-pedidos.component.html
+++ b/src/app/modules/pedidos/consultar-pedidos/consultar-pedidos.component.html
@@ -17,7 +17,7 @@
 
         <div class="col-md-3">
           <mat-form-field appearance="outline" class="w-100">
-            <mat-label>Número de Orden</mat-label>
+            <mat-label>Número de orden</mat-label>
             <input type="text" matInput [formControl]="txPedido"/>
           </mat-form-field>
         </div>
