--- a/src/app/modules/proveedores/consultar-proveedores/consultar-proveedores.component.html
+++ b/src/app/modules/proveedores/consultar-proveedores/consultar-proveedores.component.html
@@ -73,7 +73,7 @@
               </ng-container>
 
               <ng-container matColumnDef="mail">
-                <mat-header-cell *matHeaderCellDef>MAIL</mat-header-cell>
+                <mat-header-cell *matHeaderCellDef>EMAIL</mat-header-cell>
                 <mat-cell *matCellDef="let proveedor" data-label="Mail">{{ proveedor.email }}</mat-cell>
               </ng-container>
 
