--- a/src/app/modules/clientes/consultar-clientes/consultar-clientes.component.html
+++ b/src/app/modules/clientes/consultar-clientes/consultar-clientes.component.html
@@ -28,7 +28,7 @@
         </div>
         <div class="col-md-3">
           <mat-form-field appearance="outline" class="w-100">
-            <mat-label>Mail</mat-label>
+            <mat-label>Email</mat-label>
             <input type="text" matInput [formControl]="txMail"/>
           </mat-form-field>
         </div>
