--- a/src/app/modules/venta/consultar-ventas/consultar-ventas.component.html
+++ b/src/app/modules/venta/consultar-ventas/consultar-ventas.component.html
@@ -14,7 +14,7 @@
       <div class="row pt-4">
         <div class="col-md-3">
           <mat-form-field appearance="outline" class="w-100">
-            <mat-label>Número</mat-label>
+            <mat-label>Número de venta</mat-label>
             <input type="text" matInput [formControl]="txNumero"/>
           </mat-form-field>
         </div>
@@ -87,7 +87,7 @@
           <mat-table [dataSource]="tableDataSource" matSort>
 
             <ng-container matColumnDef="nroventa">
-              <mat-header-cell *matHeaderCellDef>N° VENTA</mat-header-cell>
+              <mat-header-cell *matHeaderCellDef>NÚMERO DE VENTA</mat-header-cell>
               <mat-cell *matCellDef="let venta">{{ venta.id }}</mat-cell>
             </ng-container>
 
@@ -130,7 +130,7 @@
                 <button class="btn" mat-icon-button matTooltip="Ver" (click)="verVenta(venta)">
                   <mat-icon class="ver">visibility</mat-icon>
                 </button>
-                <button mat-icon-button color="primary" matTooltip="Deshacer verta" (click)="desHacerVenta(venta)">
+                <button mat-icon-button color="primary" matTooltip="Anular venta" (click)="desHacerVenta(venta)">
                   <mat-icon class="eliminar">settings_backup_restore</mat-icon>
                 </button>
                 <button *ngIf="venta.comprobanteAfip.comprobante_pdf_url != null" mat-icon-button color="primary"  matTooltip="Imprimir comprobante" (click)="imprimirComprobante(venta)">
