--- a/src/app/modules/venta/registrar-venta/registrar-venta.component.html
+++ b/src/app/modules/venta/registrar-venta/registrar-venta.component.html
@@ -76,7 +76,7 @@
               <!-- Precio del producto -->
               <div class="row align-items-center text-center mb-3">
                 <div class="col">
-                  <strong class="product-price">${{producto.costo | number:'1.2-2':'es-AR' }}</strong>
+                  <strong class="product-price">$ {{producto.costo | number:'1.2-2':'es-AR' }}</strong>
                 </div>
               </div>
             </div>
@@ -136,7 +136,7 @@
               <mat-label>Cliente</mat-label>
               <mat-select [formControl]="txCliente">
                 <mat-option *ngFor="let cliente of this.clientes" [value]="cliente.id">
-                  {{ '(' + cliente.id + ')' + ' ' + cliente.nombre + ' ' + cliente.apellido }}
+                  {{ '(' + cliente.id + ') ' + cliente.nombre + ' ' + cliente.apellido }}
                 </mat-option>
               </mat-select>
             </mat-form-field>
@@ -154,7 +154,7 @@
             <div class="d-flex justify-content-between align-items-center border-bottom p-3 producto-item">
               <div class="col-4 d-flex flex-column">
                 <span class="m-0"><b>{{ producto.nombre }}</b></span>
-                <span class="text-muted">P/U: ${{ producto.costo | number:'1.2-2':'es-AR' }}</span>
+                <span class="text-muted">P/U: $ {{ producto.costo | number:'1.2-2':'es-AR' }}</span>
               </div>
               <div class="d-flex align-items-center col-4 justify-content-center">
                 <button class="btn btn-light btn-sm" (click)="disminuirCantidad(producto)">-</button>
@@ -162,7 +162,7 @@
                 <button class="btn btn-light btn-sm" (click)="aumentarCantidad(producto)">+</button>
               </div>
               <div class="text-end col-4">
-                <span class="m-0 costo"><b>${{ producto.costo * producto.cantidadSeleccionada | number:'1.2-2':'es-AR' }}</b></span>
+                <span class="m-0 costo"><b>$ {{ producto.costo * producto.cantidadSeleccionada | number:'1.2-2':'es-AR' }}</b></span>
                 <div class="iconos-editar-eliminar ">
                   <button mat-icon-button [matTooltip]="'Editar en esta venta'" (click)="editarProductoEnVenta(producto)">
                     <mat-icon>edit</mat-icon>
