corchetes en codigo de barra productos

--- a/src/app/modules/venta/registrar-venta/registrar-venta.component.html
+++ b/src/app/modules/venta/registrar-venta/registrar-venta.component.html
@@ -69,7 +69,7 @@
                   {{producto.nombre}}
                 </div>
                 <div class="w-100 codigoBarra">
-                  ({{producto.codigoBarra}})
+                  [ {{producto.codigoBarra}} ]
                 </div>
               </div>
 
