--- a/src/app/modules/productos/registrar-producto/registrar-producto.component.html
+++ b/src/app/modules/productos/registrar-producto/registrar-producto.component.html
@@ -118,7 +118,7 @@
           <div class="col-md-3">
             <mat-form-field appearance="outline" class="w-100">
               <mat-label>Precio sin IVA</mat-label>
-              <input type="text" matInput [formControl]="txCostoFinal" mask="separator.2" prefix="$" thousandSeparator="," />
+              <input type="text" matInput [formControl]="txPrecioSinIva" mask="separator.2" prefix="$" thousandSeparator="," />
             </mat-form-field>
           </div>
         </div>
@@ -138,13 +138,12 @@
     </div>
 
 
-    <!-- Precio sin iva y descuento por promo -->
+    <!-- Precio con iva y descuento por promo -->
     <div class="row pt-4">
       <div class="col-md-4">
         <mat-form-field appearance="outline" class="w-100">
           <mat-label>Precio con IVA</mat-label>
           <input type="text" matInput [formControl]="txCosto" mask="separator.2" prefix="$" thousandSeparator="," />
-          <mat-error *ngIf="txCosto.invalid">{{getErrorMessage(txCosto)}}</mat-error>
         </mat-form-field>
       </div>
       <div class="col-md-1 d-flex align-items-center justify-content-center symbol-cost">
@@ -167,7 +166,7 @@
       <div class="col-md-3">
         <mat-form-field appearance="outline" class="w-100">
           <mat-label>Precio final de venta</mat-label>
-          <input type="text" matInput [formControl]="txCostoFinal" mask="separator.2" prefix="$" thousandSeparator="," />
+          <input type="text" matInput [formControl]="txPrecioSinIva" mask="separator.2" prefix="$" thousandSeparator="," />
         </mat-form-field>
       </div>
     </div>
