setear valor promocion

--- a/src/app/modules/productos/registrar-producto/registrar-producto.component.html
+++ b/src/app/modules/productos/registrar-producto/registrar-producto.component.html
@@ -146,7 +146,7 @@
       <div class="col-md-2">
         <mat-form-field appearance="outline" class="w-100">
           <mat-label>Precio final de venta</mat-label>
-          <input type="text" matInput [formControl]="txPrecioFinalVenta" mask="separator.2" prefix="$" thousandSeparator="," />
+          <input type="text" matInput [formControl]="txPrecioSinIva" mask="separator.2" prefix="$" thousandSeparator="," />
         </mat-form-field>
       </div>
     </div>
