--- a/src/app/modules/productos/registrar-producto/registrar-producto.component.scss
+++ b/src/app/modules/productos/registrar-producto/registrar-producto.component.scss
@@ -1,6 +1,7 @@
 .upload-container {
   width: 100%;
   height: 100%;
+  max-height: 320px;
   border: 2px dashed #ccc;
   border-radius: 10px;
   position: relative;
