--- a/src/app/modules/venta/registrar-venta/registrar-venta.component.html
+++ b/src/app/modules/venta/registrar-venta/registrar-venta.component.html
@@ -8,25 +8,20 @@
         <br>
         <br>
         <div class="row">
-          <!-- Botón de la lupa -->
-          <div class="col-1">
-            <button mat-icon-button>
-              <mat-icon>search</mat-icon>
-            </button>
-          </div>
 
           <!-- Botón del código de barras -->
           <div class="col-1">
-            <button mat-icon-button>
+            <button mat-icon-button (click)="enfocar()">
               <mat-icon>qr_code_scanner</mat-icon>
             </button>
           </div>
 
           <!-- Input de búsqueda -->
-          <div class="col-7">
+          <div class="col-8">
             <mat-form-field appearance="outline" class="w-100">
-              <mat-label>Buscar productos</mat-label>
-              <input type="text" matInput/>
+              <mat-label>Producto</mat-label>
+              <input type="text" [formControl]="txBuscar" id="txBuscar" matInput/>
+              <mat-icon matPrefix>search</mat-icon>
             </mat-form-field>
           </div>
 
@@ -42,7 +37,7 @@
 
         <!-- Lista de productos a seleccionar -->
         <div class="row">
-          <div class="col-12 col-md-6 col-lg-4 p-4" *ngFor="let producto of productos"> <!-- Ajustar columnas para pantallas pequeñas -->
+          <div class="col-12 col-md-6 col-lg-4 p-4" *ngFor="let producto of productosFiltrados | slice:0:30"> <!-- Ajustar columnas para pantallas pequeñas -->
             <div class="card product-card"
                  [ngClass]="{'selected-card': producto.seleccionadoParaVenta}"
                  (click)="seleccionarProducto(producto)">
@@ -94,7 +89,7 @@
             <p>
               Para realizar tu primer venta, te invitamos a crear tu primer producto.
             </p>
-            <button mat-raised-button color="accent" class="btn round" id="btnBuscar">Nuevo producto</button>
+            <button mat-raised-button color="accent" class="btn round" id="btnBuscar" (click)="registrarProducto()">Nuevo producto</button>
           </div>
         </div>
 
@@ -130,6 +125,18 @@
           </div>
         </div>
 
+        <div class="row">
+          <div class="col">
+            <mat-form-field appearance="outline" class="w-100">
+              <mat-label>Empleado</mat-label>
+              <mat-select [formControl]="txEmpleado">
+                <mat-option *ngFor="let empleado of this.listaEmpleados" [value]="empleado.id">
+                  {{ empleado.nombre + ' ' + empleado.apellido }}
+                </mat-option>
+              </mat-select>
+            </mat-form-field>
+          </div>
+        </div>
         <div class="row">
           <div class="col-9">
             <mat-form-field appearance="outline" class="w-100">
