--- a/src/app/modules/venta/registrar-venta/registrar-venta.component.html
+++ b/src/app/modules/venta/registrar-venta/registrar-venta.component.html
@@ -106,7 +106,7 @@
           <div class="col">
             <mat-form-field appearance="outline" class="w-100">
               <mat-label>Forma de pago</mat-label>
-              <mat-select [formControl]="txFormaDePago">
+              <mat-select [formControl]="txFormaDePago" (valueChange)="cambiarFormaDePago($event)">
                 <mat-option *ngFor="let fdp of this.formasDePago" [value]="fdp.id">
                   {{ fdp.nombre }}
                 </mat-option>
@@ -117,6 +117,29 @@
             <mat-form-field appearance="outline" class="w-100">
               <mat-label>Tipo de Facturación</mat-label>
               <mat-select [formControl]="txTipoFacturacion">
+                <mat-option *ngFor="let tp of this.tiposDeFacturacion" [value]="tp.id">
+                  {{ tp.nombre }}
+                </mat-option>
+              </mat-select>
+            </mat-form-field>
+          </div>
+        </div>
+
+        <div class="row" *ngIf="mostrarTarjetasCuotas">
+          <div class="col-9">
+            <mat-form-field appearance="outline" class="w-100">
+              <mat-label>Tarjeta</mat-label>
+              <mat-select [formControl]="txTarjeta">
+                <mat-option *ngFor="let tarjeta of this.tarjetasRegistradas" [value]="tarjeta.id">
+                  {{ tarjeta.nombre }}
+                </mat-option>
+              </mat-select>
+            </mat-form-field>
+          </div>
+          <div class="col-3">
+            <mat-form-field appearance="outline" class="w-100">
+              <mat-label>Cuotas</mat-label>
+              <mat-select [formControl]="txCuotas" [disabled]="true">
                 <mat-option *ngFor="let tp of this.tiposDeFacturacion" [value]="tp.id">
                   {{ tp.nombre }}
                 </mat-option>
