--- a/src/app/modules/venta/registrar-venta/registrar-venta.component.html
+++ b/src/app/modules/venta/registrar-venta/registrar-venta.component.html
@@ -136,10 +136,10 @@
               </mat-select>
             </mat-form-field>
           </div>
-          <div class="col-3">
+          <div class="col-3" *ngIf="this.txFormaDePago.value == this.formasDePagoEnum.TARJETA_CREDITO">
             <mat-form-field appearance="outline" class="w-100">
               <mat-label>Cuotas</mat-label>
-              <mat-select [formControl]="txCuotas" [disabled]="true">
+              <mat-select [formControl]="txCuotas">
                 <mat-option *ngFor="let tp of this.tiposDeFacturacion" [value]="tp.id">
                   {{ tp.nombre }}
                 </mat-option>
