--- a/src/app/modules/empleados/solicitar-licencia/solicitar-licencia.component.html
+++ b/src/app/modules/empleados/solicitar-licencia/solicitar-licencia.component.html
@@ -14,7 +14,7 @@
     <div class="row">
       <div class="col">
         <mat-form-field appearance="outline" class="w-100">
-          <mat-label>MotivoModel</mat-label>
+          <mat-label>Motivo</mat-label>
           <mat-select [formControl]="txMotivo">
             <mat-option *ngFor="let motivo of listaMotivos" [value]="motivo.id">
               {{ motivo.nombre }}
