--- a/src/app/modules/venta/registrar-venta/registrar-venta.component.html
+++ b/src/app/modules/venta/registrar-venta/registrar-venta.component.html
@@ -166,7 +166,7 @@
               <mat-label>Cliente</mat-label>
               <mat-select [formControl]="txCliente">
                 <mat-option *ngFor="let cliente of this.clientes" [value]="cliente.id">
-                  {{ '(' + cliente.id + ') ' + cliente.nombre + ' ' + cliente.apellido }}
+                  {{ cliente.nombre + ' ' + cliente.apellido }}
                 </mat-option>
               </mat-select>
             </mat-form-field>
